[package]
name = "lnk2bodyfile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lnk_parser = { path = "../lnk_parser" }
anyhow = "1.0"
bodyfile = "0.1"
clap={version="4", features=["derive", "cargo", "wrap_help"]}
clap-verbosity-flag = {version="2.0.0"}
log = "0.4"
simplelog = "0.12"
chrono = "0.4"
winparsingtools = {path="../winparsingtools"}